--- a/catalog.html
+++ b/catalog.html
@@ -49,7 +49,7 @@
           <div class="range-filter">
             <div class="range-controls">
               <div class="scale">
-                <div class="bar" style="margin-left: 20%; width: 30%"></div>
+                <div class="bar" style="margin-left: 5%; width: 65%"></div>
               </div>
               <div class="toggle toggle-min"></div>
               <div class="toggle toggle-max"></div>
@@ -136,7 +136,7 @@
             <a class="catalog-info-title " title="рассмотреть подробнее " href="# ">Sedona</a>
             <p class="catalog-info-description ">Информационный сайт
               <br>для туристов</p>
-            <a class="btn btn-catalog-info " href="# ">9900 руб</a>
+            <a class="btn btn-catalog-info " href="# ">9900 руб.</a>
           </div>
         </div>
         <div class="catalog-item ">
@@ -147,7 +147,7 @@
           <div class="catalog-info ">
             <a class="catalog-info-title " title="рассмотреть подробнее " href="# ">Pink app</a>
             <p class="catalog-info-description ">Продуктовый лендинг приложения для iOS и Android</p>
-            <a class="btn btn-catalog-info " href="# ">9900 руб</a>
+            <a class="btn btn-catalog-info " href="# ">9900 руб.</a>
           </div>
         </div>
         <div class="catalog-item ">
@@ -159,7 +159,7 @@
             <a class="catalog-info-title " title="рассмотреть подробнее " href="# ">Barbershop</a>
             <p class="catalog-info-description ">Сайт салоны красоты.
               <br>Для мужчин, да.</p>
-            <a class="btn btn-catalog-info " href="# ">9900 руб</a>
+            <a class="btn btn-catalog-info " href="# ">9900 руб.</a>
           </div>
         </div>
         <div class="catalog-item ">
@@ -171,7 +171,7 @@
             <a class="catalog-info-title " title="рассмотреть подробнее " href="# ">Mishka</a>
             <p class="catalog-info-description ">Интернет-магазин
               <br>вязаных игрушек</p>
-            <a class="btn btn-catalog-info " href="# ">9900 руб</a>
+            <a class="btn btn-catalog-info " href="# ">9900 руб.</a>
           </div>
         </div>
         <div class="catalog-item ">
@@ -182,7 +182,7 @@
           <div class="catalog-info ">
             <a class="catalog-info-title " title="рассмотреть подробнее " href="# ">A Plus</a>
             <p class="catalog-info-description ">Лендинг курсов повышения квалификации</p>
-            <a class="btn btn-catalog-info " href="# ">9900 руб</a>
+            <a class="btn btn-catalog-info " href="# ">9900 руб.</a>
           </div>
         </div>
         <div class="catalog-item ">
@@ -193,7 +193,7 @@
           <div class="catalog-info ">
             <a class="catalog-info-title " title="рассмотреть подробнее " href="# ">Кваст</a>
             <p class="catalog-info-description ">Промо-сайт производителя крафтового кваса</p>
-            <a class="btn btn-catalog-info " href="# ">9900 руб</a>
+            <a class="btn btn-catalog-info " href="# ">9900 руб.</a>
           </div>
         </div>
       </div>
