js в отдельном файле

--- a/catalog.html
+++ b/catalog.html
@@ -64,38 +64,38 @@
         <p class="filter-form-title">Сетка</p>
         <ul class="filter-list">
           <li>
-            <input type="radio" name="grid-type" value="Адаптивная" id="adapt" placeholder="Адаптивная">
+            <input type="radio" name="grid-type" value="Адаптивная" id="adapt">
             <label for="adapt">Адаптивная</label>
           </li>
           <li>
-            <input type="radio" name="grid-type" value="Фиксированная" id="fixed" placeholder="Фиксированная">
+            <input type="radio" name="grid-type" value="Фиксированная" id="fixed">
             <label for="fixed">Фиксированная</label>
           </li>
           <li>
-            <input type="radio" name="grid-type" value="Резиновая" id="fluid" placeholder="Резиновая">
+            <input type="radio" name="grid-type" value="Резиновая" id="fluid">
             <label for="fluid">Резиновая</label>
           </li>
         </ul>
         <p class="filter-form-title">Особенности</p>
         <ul class="filter-list">
           <li>
-            <input type="checkbox" name="slider" value="" id="slider" placeholder="Слайдер" checked="">
+            <input type="checkbox" name="slider" value="" id="slider" checked="">
             <label for="slider">Слайдер</label>
           </li>
           <li>
-            <input type="checkbox" name="benefit" value="" id="benefit" placeholder="Блок преимуществ">
+            <input type="checkbox" name="benefit" value="" id="benefit">
             <label for="benefit">Блок преимуществ</label>
           </li>
           <li>
-            <input type="checkbox" name="news" value="" id="news" placeholder="Новости">
+            <input type="checkbox" name="news" value="" id="news">
             <label for="news">Новости</label>
           </li>
           <li>
-            <input type="checkbox" name="gallery" value="" id="gallery" placeholder="Галерея">
+            <input type="checkbox" name="gallery" value="" id="gallery">
             <label for="gallery">Галерея</label>
           </li>
           <li>
-            <input type="checkbox" name="shop" value="" id="shop" placeholder="Корзина">
+            <input type="checkbox" name="shop" value="" id="shop">
             <label for="shop">Корзина</label>
           </li>
         </ul>
@@ -131,7 +131,7 @@
           <div class="catalog-item-header ">
             <span></span><span></span><span></span>
           </div>
-          <img class="catalog-item-image " src="img/img-sedona.jpg " alt="макет Sedona " width="360 " height="576 ">
+          <img class="catalog-item-image " src="img/img-sedona.jpg " alt="макет Sedona " width="360" height="576">
           <div class="catalog-info ">
             <a class="catalog-info-title " title="рассмотреть подробнее " href="# ">Sedona</a>
             <p class="catalog-info-description ">Информационный сайт
@@ -143,7 +143,7 @@
           <div class="catalog-item-header ">
             <span></span><span></span><span></span>
           </div>
-          <img class="catalog-item-image " src="img/img-pink.jpg " alt="макет Pink app " width="360 " height="576 ">
+          <img class="catalog-item-image " src="img/img-pink.jpg " alt="макет Pink app " width="360" height="576">
           <div class="catalog-info ">
             <a class="catalog-info-title " title="рассмотреть подробнее " href="# ">Pink app</a>
             <p class="catalog-info-description ">Продуктовый лендинг приложения для iOS и Android</p>
@@ -154,11 +154,11 @@
           <div class="catalog-item-header ">
             <span></span><span></span><span></span>
           </div>
-          <img src="img/img-barbershop.jpg " alt="макет Barbershop " width="360 " height="576 ">
+          <img src="img/img-barbershop.jpg " alt="макет Barbershop " width="360" height="576">
           <div class="catalog-info ">
             <a class="catalog-info-title " title="рассмотреть подробнее " href="# ">Barbershop</a>
             <p class="catalog-info-description ">Сайт салоны красоты.
-              <br>Для мужчин, да.</p>
+              <br>Для мужчин, да.</p>
             <a class="btn btn-catalog-info " href="# ">9900 руб.</a>
           </div>
         </div>
@@ -166,7 +166,7 @@
           <div class="catalog-item-header ">
             <span></span><span></span><span></span>
           </div>
-          <img src="img/img-mishka.jpg " alt="макет Mishka " width="360 " height="576 ">
+          <img src="img/img-mishka.jpg " alt="макет Mishka " width="360" height="576">
           <div class="catalog-info ">
             <a class="catalog-info-title " title="рассмотреть подробнее " href="# ">Mishka</a>
             <p class="catalog-info-description ">Интернет-магазин
@@ -178,7 +178,7 @@
           <div class="catalog-item-header ">
             <span></span><span></span><span></span>
           </div>
-          <img src="img/img-aplus.jpg " alt="макет A Plus " width="360 " height="576 ">
+          <img src="img/img-aplus.jpg " alt="макет A Plus " width="360" height="576">
           <div class="catalog-info ">
             <a class="catalog-info-title " title="рассмотреть подробнее " href="# ">A Plus</a>
             <p class="catalog-info-description ">Лендинг курсов повышения квалификации</p>
@@ -189,7 +189,7 @@
           <div class="catalog-item-header ">
             <span></span><span></span><span></span>
           </div>
-          <img src="img/img-kvast.jpg " alt="макет Кваст " width="360 " height="576 ">
+          <img src="img/img-kvast.jpg " alt="макет Кваст " width="360" height="576">
           <div class="catalog-info ">
             <a class="catalog-info-title " title="рассмотреть подробнее " href="# ">Кваст</a>
             <p class="catalog-info-description ">Промо-сайт производителя крафтового кваса</p>
