--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <a href="#">Клиенты</a>
           </li>
           <li>
-            <a href="#">Магазин</a>
+            <a href="catalog.html">Магазин</a>
           </li>
           <li>
             <a href="#">Контакты</a>
@@ -209,23 +209,7 @@
     </form>
   </div>
 
-  <script>
-    var link = document.querySelector(".btn-write-us");
-
-    var popup = document.querySelector(".modal-write-us");
-    var close = popup.querySelector(".modal-write-us-close");
-
-    link.addEventListener("click", function(event) {
-      event.preventDefault();
-      popup.classList.add("modal-write-us-show");
-    });
-
-    close.addEventListener("click", function(event) {
-      event.preventDefault();
-      popup.classList.remove("modal-write-us-show");
-    });
-
-  </script>
+  <script src="js/script.js"></script>
 
 </body>
 
