--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Нёрдс</title>
+  <script src="http://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
+  <script src="icon_customImage.js" type="text/javascript"></script>
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
@@ -68,7 +70,7 @@
     </div>
   </header>
 
-  <div class="container ">
+  <div class="container">
 
     <section class="features clearfix">
       <div class="features-item">
@@ -132,17 +134,16 @@
       </div>
     </div>
 
-    <div class="clients-logo ">
+    <div class="clients-logo">
       <ul>
         <li>
           <a title="html-academy" href="#">
             <img src="img/html-logo.png" alt="html-academy" width="260" height="180">
           </a>
         </li>
-
         <li>
           <a title="borodinski" href="#">
-            <img src="img/borodinsky-logo-.png" alt="borodinski" width="260" height="180">
+            <img src="img/borodinsky-logo.png" alt="borodinski" width="260" height="180">
           </a>
         </li>
         <li>
@@ -162,12 +163,13 @@
   <footer>
 
     <div class="map">
+      <div id="map" class="map-wrapper"></div>
       <div class="container contacts">
         <section class="map-contacts">
           <p class="map-contacts-title">NЁRDS DESIGN STUDIO</p>
           <p class="map-contacts-address">191186, Санкт-Петербург, <br>ул. Б. Конюшенная, д. 19/8</p>
           <p class="map-contacts-phone">тел. +7 (812) 275-75-75</p>
-          <a class="btn btn-write-us" href="#">Напишите нам</a>
+          <a class="btn btn-write-us" href="contacts.html">Напишите нам</a>
         </section>
       </div>
     </div>
