--- a/index.html
+++ b/index.html
@@ -4,10 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Нёрдс</title>
-  <script src="http://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
-  <script src="icon_customImage.js" type="text/javascript"></script>
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.min.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
 </head>
 
@@ -161,7 +159,6 @@
   </div>
 
   <footer>
-
     <div class="map">
       <div id="map" class="map-wrapper"></div>
       <div class="container contacts">
@@ -184,7 +181,6 @@
         <p class="footer-info-description">Скидка 10% для друзей из социальных сетей.</p>
       </section>
     </div>
-
 
   </footer>
 
@@ -211,6 +207,7 @@
     </form>
   </div>
 
+  <script src="http://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
   <script src="js/script.js"></script>
 
 </body>
