style.min.css and disabled
сделано

--- a/catalog.html
+++ b/catalog.html
@@ -72,7 +72,7 @@
             <label for="fixed">Фиксированная</label>
           </li>
           <li>
-            <input type="radio" name="grid-type" value="Резиновая" id="fluid">
+            <input type="radio" name="grid-type" value="Резиновая" id="fluid" disabled>
             <label for="fluid">Резиновая</label>
           </li>
         </ul>
@@ -87,7 +87,7 @@
             <label for="benefit">Блок преимуществ</label>
           </li>
           <li>
-            <input type="checkbox" name="news" value="" id="news" checked="">
+            <input type="checkbox" name="news" value="" id="news">
             <label for="news">Новости</label>
           </li>
           <li>
@@ -95,7 +95,7 @@
             <label for="gallery">Галерея</label>
           </li>
           <li>
-            <input type="checkbox" name="shop" value="" id="shop">
+            <input type="checkbox" name="shop" value="" id="shop" checked="" disabled>
             <label for="shop">Корзина</label>
           </li>
         </ul>
