--- a/catalog.html
+++ b/catalog.html
@@ -49,7 +49,7 @@
           <div class="range-filter">
             <div class="range-controls">
               <div class="scale">
-                <div class="bar" style="margin-left: 5%; width: 65%"></div>
+                <div class="bar"></div>
               </div>
               <div class="toggle toggle-min"></div>
               <div class="toggle toggle-max"></div>
@@ -132,8 +132,7 @@
           <img class="catalog-item-image" src="img/img-sedona.jpg" alt="макет Sedona" width="360" height="576">
           <div class="catalog-info">
             <a class="catalog-info-title" title="рассмотреть подробнее" href="#">Sedona</a>
-            <p class="catalog-info-description">Информационный сайт
-              <br>для туристов</p>
+            <p class="catalog-info-description">Информационный сайт для туристов</p>
             <a class="btn btn-catalog-info" href="#">9900 руб.</a>
           </div>
         </div>
@@ -155,8 +154,7 @@
           <img src="img/img-barbershop.jpg" alt="макет Barbershop" width="360" height="576">
           <div class="catalog-info">
             <a class="catalog-info-title" title="рассмотреть подробнее" href="#">Barbershop</a>
-            <p class="catalog-info-description">Сайт салоны красоты.
-              <br>Для мужчин, да.</p>
+            <p class="catalog-info-description">Сайт салоны красоты. Для мужчин, да.</p>
             <a class="btn btn-catalog-info" href="#">9900 руб.</a>
           </div>
         </div>
@@ -167,8 +165,7 @@
           <img src="img/img-mishka.jpg" alt="макет Mishka" width="360" height="576">
           <div class="catalog-info">
             <a class="catalog-info-title" title="рассмотреть подробнее" href="#">Mishka</a>
-            <p class="catalog-info-description">Интернет-магазин
-              <br>вязаных игрушек</p>
+            <p class="catalog-info-description">Интернет-магазин вязаных игрушек</p>
             <a class="btn btn-catalog-info" href="#">9900 руб.</a>
           </div>
         </div>
@@ -212,7 +209,7 @@
       <div class="container contacts">
         <section class="map-contacts">
           <p class="map-contacts-title">NЁRDS DESIGN STUDIO</p>
-          <p class="map-contacts-address">191186, Санкт-Петербург, <br>ул. Б. Конюшенная, д. 19/8</p>
+          <p class="map-contacts-address">191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
           <p class="map-contacts-phone">тел. +7 (812) 275-75-75</p>
           <a class="btn btn-write-us" href="contacts.html">Напишите нам</a>
         </section>
@@ -235,27 +232,26 @@
   <div class="modal-write-us">
     <button class="modal-write-us-close" type="button" title="Закрыть">Закрыть</button>
     <h2 class="modal-write-us-title">Напишите нам</h2>
-    <a href="#"></a>
 
     <form class="write-us-form" action="https://echo.htmlacademy.ru" method="post">
       <label for="write-name">
-              <span class="write">Ваше имя</span>
-              <input type="text" name="name" value="" placeholder="Представьтесь, пожалуйста" id="write-name">
-            </label>
+        <span class="write">Ваше имя</span>
+        <input type="text" name="writename" value="" placeholder="Представьтесь, пожалуйста" id="write-name">
+      </label>
       <label for="write-mail">
-              <span>Ваш e-mail</span>
-              <input type="text" name="text" value="" placeholder="Для отправки ответа" id="write-mail">
-            </label>
+        <span>Ваш e-mail</span>
+        <input type="text" name="mail" value="" placeholder="Для отправки ответа" id="write-mail">
+      </label>
       <label for="write-post">
-              <span>Текст письма</span>
-              <textarea name="post" id="write-post" rows="5" placeholder="В свободной форме"></textarea>
-            </label>
+        <span>Текст письма</span>
+        <textarea name="post" id="write-post" rows="5" placeholder="В свободной форме"></textarea>
+      </label>
       <button class="btn btn-write-us-form" type="submit">Отправить</button>
     </form>
   </div>
 
   <script src="http://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
-  <script src="js/script.js"></script>
+  <script src="js/script.min.js"></script>
 
 </body>
 
