--- a/index.html
+++ b/index.html
@@ -48,19 +48,19 @@
         </div>
         <div class="slides">
           <div class="slide">
-            <h2 class="slider-item-title">Долго, дорого, <br>
-                скрупулезно.</h2>
-            <p class="slider-item">Математически выверенный дизайн<br> для вашего сайта или мобильного приложения.</p>
+            <h2 class="slider-item-title">Долго, дорого, скрупулезно.</h2>
+            <p class="slider-item">Математически выверенный дизайн
+              <span>для вашего сайта или мобильного приложения.</span></p>
             <a class="btn" title="Узнать больше" href="#">Узнать больше</a>
           </div>
           <div class="slide">
-            <h2 class="slider-item-title">Любим математику <br>как никто другой</h2>
-            <p class="slider-item">Никакого креатива, только математические формулы <br>для расчета идеальных пропорций.</p>
+            <h2 class="slider-item-title">Любим математику как никто другой</h2>
+            <p class="slider-item">Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
             <a class="btn" title="Узнать больше" href="#">Узнать больше</a>
           </div>
           <div class="slide">
-            <h2 class="slider-item-title">Только ночь,<br>только хардкор</h2>
-            <p class="slider-item">Работать днем, как все? Мы против этого. <br>Ближе к полуночи работа только начинается.</p>
+            <h2 class="slider-item-title">Только ночь, только хардкор</h2>
+            <p class="slider-item">Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
             <a class="btn" title="Узнать больше" href="#">Узнать больше</a>
           </div>
         </div>
@@ -136,22 +136,22 @@
       <ul>
         <li>
           <a title="html-academy" href="#">
-            <img src="img/html-logo.png" alt="html-academy" width="260" height="180">
+            <img src="img/logo-1.png" alt="html-academy" width="199" height="68">
           </a>
         </li>
         <li>
           <a title="borodinski" href="#">
-            <img src="img/borodinsky-logo.png" alt="borodinski" width="260" height="180">
+            <img src="img/logo-2.png" alt="borodinski" width="209" height="90">
           </a>
         </li>
         <li>
           <a title="pink" href="#">
-            <img src="img/pink-logo.png" alt="pink" width="260" height="180">
+            <img src="img/logo-3.png" alt="pink" width="185" height="52">
           </a>
         </li>
         <li>
           <a title="mishka" href="#">
-            <img src="img/mishka-logo.png" alt="mishka" width="260" height="180">
+            <img src="img/logo-4.png" alt="mishka" width="173" height="84">
           </a>
         </li>
       </ul>
@@ -164,7 +164,7 @@
       <div class="container contacts">
         <section class="map-contacts">
           <p class="map-contacts-title">NЁRDS DESIGN STUDIO</p>
-          <p class="map-contacts-address">191186, Санкт-Петербург, <br>ул. Б. Конюшенная, д. 19/8</p>
+          <p class="map-contacts-address">191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
           <p class="map-contacts-phone">тел. +7 (812) 275-75-75</p>
           <a class="btn btn-write-us" href="contacts.html">Напишите нам</a>
         </section>
@@ -188,27 +188,26 @@
   <div class="modal-write-us">
     <button class="modal-write-us-close" type="button" title="Закрыть">Закрыть</button>
     <h2 class="modal-write-us-title">Напишите нам</h2>
-    <a href="#"></a>
 
     <form class="write-us-form" action="https://echo.htmlacademy.ru" method="post">
       <label for="write-name">
-            <span class="write">Ваше имя</span>
-            <input type="text" name="name" value="" placeholder="Представьтесь, пожалуйста" id="write-name">
-          </label>
+        <span class="write">Ваше имя</span>
+        <input type="text" name="writename" value="" placeholder="Представьтесь, пожалуйста" id="write-name">
+      </label>
       <label for="write-mail">
-            <span>Ваш e-mail</span>
-            <input type="text" name="text" value="" placeholder="Для отправки ответа" id="write-mail">
-          </label>
+        <span>Ваш e-mail</span>
+        <input type="text" name="mail" value="" placeholder="Для отправки ответа" id="write-mail">
+      </label>
       <label for="write-post">
-            <span>Текст письма</span>
-            <textarea name="post" id="write-post" rows="5" placeholder="В свободной форме"></textarea>
-          </label>
+        <span>Текст письма</span>
+        <textarea name="post" id="write-post" rows="5" placeholder="В свободной форме"></textarea>
+      </label>
       <button class="btn btn-write-us-form" type="submit">Отправить</button>
     </form>
   </div>
 
   <script src="http://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
-  <script src="js/script.js"></script>
+  <script src="js/script.min.js"></script>
 
 </body>
 
